--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
   "bugs": {
     "url": "https://github.com/jayli/grunt-inline-assets/issues"
   },
-  "_resolved": "http://registry.npm.taobao.net/grunt-inline-assets/download/grunt-inline-assets-0.1.1.tgz"
+  "_resolved": "http://registry.npm.taobao.net/grunt-inline-assets/download/grunt-inline-assets-0.1.1.tgz",
   "_npmVersion": "1.3.24",
   "_npmUser": {
     "name": "bachi",
@@ -63,5 +63,5 @@
       "name": "dickeylth",
       "email": "dickeylth@gmail.com"
     }
-]
+	]
 }
