--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-inline-assets",
   "description": "grunt-inline-assets",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "homepage": "https://github.com/jayli/grunt-inline-assets",
   "author": {
     "name": "bachi",
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "async": "^0.7.0",
+    "uglify-js": "~2.4.15",
     "iconv-lite": "",
     "joinbuffers": "~0.1.1",
     "request": "^2.34.0"
@@ -39,17 +40,20 @@
   "keywords": [
     "gruntplugin"
   ],
-  "readmeFilename": "README.md",
-  "_id": "grunt-inline-assets@0.1.1",
-  "_from": "grunt-inline-assets@",
+  "_id": "grunt-inline-assets@0.1.4",
+  "_from": "grunt-inline-assets@*",
   "dist": {
-    "shasum": "22e1536e55ff4b2c4b4c76901fd7222a99d910ef"
+    "shasum": "c5330265351f4586810d233ab6d213690dd21c43",
+    "size": 7686,
+    "noattachment": false,
+    "key": "grunt-inline-assets/-/grunt-inline-assets-0.1.4.tgz",
+    "tarball": "http://registry.npm.alibaba-inc.com/grunt-inline-assets/download/grunt-inline-assets-0.1.4.tgz"
   },
   "bugs": {
     "url": "https://github.com/jayli/grunt-inline-assets/issues"
   },
-  "_resolved": "http://registry.npm.taobao.net/grunt-inline-assets/download/grunt-inline-assets-0.1.1.tgz",
-  "_npmVersion": "1.3.24",
+  "_resolved": "http://registry.npm.alibaba-inc.com/grunt-inline-assets/download/grunt-inline-assets-0.1.4.tgz",
+  "_npmVersion": "1.4.16",
   "_npmUser": {
     "name": "bachi",
     "email": "bachi@taobao.com"
@@ -63,5 +67,10 @@
       "name": "dickeylth",
       "email": "dickeylth@gmail.com"
     }
-	]
+  ],
+  "gitHead": "e962b4fa75fe44d865aace04da89a7f44bac53b6",
+  "_shasum": "c5330265351f4586810d233ab6d213690dd21c43",
+  "directories": {},
+  "publish_time": 1407427082181,
+  "_cnpm_publish_time": 1407427082181
 }
